# nonebot-plugin-avatar-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/nonebot_plugin_avatar_manager/: __init__.py  config.py  handlers.py  models.py  resources.py  scheduler.py  utils.py
